backed/easypost-backed-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: easypost-app
  labels:
    app: easypost-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: easypost-app
  template:
    metadata:
      labels:
        app: easypost-app
    spec:
      # 添加节点选择器，指定工作节点
      nodeSelector:
        node-role.kubernetes.io/worker: "true"

      # 镜像拉取认证配置
      imagePullSecrets:
        - name: aliyun-registry-secret

      containers:
        - name: easypost-app
          image: registry.cn-shanghai.aliyuncs.com/qianjisan/easypost-backed:latest
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: "1"
              memory: "512Mi"
            requests:
              cpu: "0.5"
              memory: "256Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: easypost-app
spec:
  type: NodePort
  selector:
    app: easypost-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
      nodePort: 30080
